# yo-clip

./: .gitignore  COLORED_SHAPEFILE_README.md  GRID_SHAPEFILE_README.md  HIERARCHICAL_PROMPTS.md  Makefile  README.md  color_flow_demo.py  debug_process.py  debug_yoclip.py  pyproject.toml  requirements-dev.txt  restored_workflow.py  test_colored_output.dbf  test_colored_output.qml  test_colored_output.shp  test_colored_output.shx  test_colored_shapefile.py  test_complete_coverage.py  test_continuous_grid.py  test_create_query_auto.py  test_grid_shapefile.py  test_grid_sizing.py  test_hierarchical_prompts.py  test_multi_class_processing.py  test_process_batch.py  test_utm_coordinates.py  workflow_example.py
tests/: conftest.py  test_batch_processing.py  test_config.py  test_main.py  test_utils.py
yoclip/: __init__.py  config.py  main.py  process.py  utils.py  yolotoclip.py
yoclip-env/: pyvenv.cfg
